new setup process

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -80,6 +80,11 @@ AbstractClientHandler_message=Please select a client to delete
 AccountingSplashHandler_reuseDataMsg=Existing data found in data file for user {0}.\n\Re-use this data?
 AccountingSplashHandler_reuseDataText=Reuse data?
 AccountingSplashHandler_setupDialogCancelledMsg=Cannot continue application without necessary info - exiting now...
+AccountingSplashHandler_welcomeDialogTitle=Welcome to togginho Accounting!
+AccountingSplashHandler_welcomeDialogMessage=It appears you are running the application for the first time.\nYou may now decide whether to import existing data or start from scratch.
+AccountingSplashHandler_welcomeDialogCreateNew=Create new data (default).
+AccountingSplashHandler_welcomeDialogUseExisting=Use an existing data file.
+AccountingSplashHandler_welcomeDialogImportXml=Import data from XML.
 
 AddressWizardPage_desc=Enter contact details.\nThese can also be edited later
 AddressWizardPage_title=Contact details
@@ -183,11 +188,12 @@ SendInvoiceCommand_title=Mark invoice as billed...
 SendInvoiceCommand_sentDateLabel=Billed on:
 
 SetupWizard_windowTitle=Accounting setup...
+
 SetupBankAccountWizardPage_desc=Please enter your bank account details.\nThese will be used when generating invoices.
-SetupBasicInfoWizardPage_dataFile=Data file:
-SetupBasicInfoWizardPage_desc=Please enter your basic information needed for the application to work properly\nThis information can be changed later.
-SetupBasicInfoWizardPage_selectFile=Select file...
-SetupBasicInfoWizardPage_yourName=Your name:
+
+SetupExistingDataWizard_windowTitle=Use existing data...
+
+TaxIdAndDescriptionWizardPage_desc=Enter basic information about yourself.\nYou can also add or edit this information later, using the user editor.
 
 UserEditor_header=Edit your profile
 UserEditor_taxeRateDescription=Configure your tax rates
@@ -195,3 +201,11 @@ UserEditor_taxRate=Rate
 UserEditor_taxRateAbbreviation=Abbreviation
 UserEditor_taxRateName=Name
 UserEditor_taxRates=Tax Rates
+
+UserNameAndDbFileWizardPage_dataFile=Data file:
+UserNameAndDbFileWizardPage_desc=Enter your full name (as it will appear on an invoice)\n
+UserNameAndDbFileWizardPage_descNewFile=and select a location where your data will be stored
+UserNameAndDbFileWizardPage_descOldFile=and select your existing data location file
+UserNameAndDbFileWizardPage_selectFile=Select file...
+UserNameAndDbFileWizardPage_title=User name and data file
+UserNameAndDbFileWizardPage_yourName=Your name:
