--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -73,6 +73,11 @@ AbstractClientHandler_message=Bitte w\u00E4hlen Sie einen Kunden zum l\u00F6sche
 AccountingSplashHandler_reuseDataMsg=Existierende Daten f\u00FCr Benutzer \"{0}\" wurden in der angegebenen Datei gefunden.\nDiese weiter verwenden?
 AccountingSplashHandler_reuseDataText=Daten verwenden?
 AccountingSplashHandler_setupDialogCancelledMsg=Notwendige Angaben f\u00FCr Programmausf\u00FChrung fehlen - Abbruch.
+AccountingSplashHandler_welcomeDialogTitle=Willkommen bei togginho Accounting!
+AccountingSplashHandler_welcomeDialogMessage=Die Anwendung wird zum ersten mal ausgeführt. Wählen Sie, ob mit neuen Daten begonnen oder existierende importiert werden sollen.
+AccountingSplashHandler_welcomeDialogCreateNew=Neue Daten anlegen (standard)
+AccountingSplashHandler_welcomeDialogUseExisting=Eine existierende Speicherdatei verwenden.
+AccountingSplashHandler_welcomeDialogImportXml=Daten aus XML-Datei importieren.
 
 AddressWizardPage_desc=Bitte Kontaktinformationen eingeben.\nDiese k\u00F6nnen auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
 AddressWizardPage_title=Kontaktinformationen
@@ -175,12 +180,13 @@ SendInvoiceCommand_message=Wählen Sie das Datum, für die Fakturierung der Rechnu
 SendInvoiceCommand_title=Rechnung fakturieren...
 SendInvoiceCommand_sentDateLabel=Fakturiert am:
 
-SetupWizard_windowTitle=Accounting setup...
+SetupWizard_windowTitle=Accounting Einrichtung...
+
 SetupBankAccountWizardPage_desc=Bitte Bankverbindung eingeben.\nDies kann auch sp\u00E4ter noch eingegeben oder ge\u00E4ndert werden.
-SetupBasicInfoWizardPage_dataFile=Speicherdatei:
-SetupBasicInfoWizardPage_desc=Bitte f\u00FCllen Sie folgende notwendigen Informationen aus.\nDiese k\u00F6nnen sp\u00E4ter noch ge\u00E4ndert werden.
-SetupBasicInfoWizardPage_selectFile=Ausw\u00E4hlen...
-SetupBasicInfoWizardPage_yourName=Ihr Name:
+
+SetupExistingDataWizard_windowTitle=Bestehende Daten verwenden...
+
+TaxIdAndDescriptionWizardPage_desc=Bitte f\u00FCllen Sie folgende Informationen aus.\nDiese k\u00F6nnen auch sp\u00E4ter angegeben oder ge\u00E4ndert werden.
 
 UserEditor_header=Ihre Profildaten
 UserEditor_taxeRateDescription=Verwalten Sie Ihre Steuers\u00E4tze
@@ -188,3 +194,10 @@ UserEditor_taxRate=Satz
 UserEditor_taxRateAbbreviation=Abk\u00FCrzung
 UserEditor_taxRateName=Name
 UserEditor_taxRates=Steuers\u00E4tze
+
+UserNameAndDbFileWizardPage_dataFile=Speicherdatei:
+UserNameAndDbFileWizardPage_desc=Geben Sie Ihren vollen Namen an (wie er auf Rechnungen erscheint)\n
+UserNameAndDbFileWizardPage_descNewFile=und w\u00E4hlen Sie einen Speicherort f\u00FCr Ihre Daten aus
+UserNameAndDbFileWizardPage_descOldFile=und w\u00E4hlen Sie Ihre existierende Speicherdatei aus.
+UserNameAndDbFileWizardPage_selectFile=Ausw\u00E4hlen...
+UserNameAndDbFileWizardPage_yourName=Ihr Name:
