added specific error for incompatible file format

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -33,6 +33,7 @@ AccountingContextFactory_errorMissingContextProperty=Missing context property: [
 AccountingService_errorNoContext=Cannot initialise a service without a context
 AccountingService_errorServiceNotInitialised=Service is not initialised!
 AccountingService_errorFileLocked=DB File [{0}] is locked by another process.
+AccountingService_errorIllegalFileFormat=File [{0}] is not a valid data file format!
 AccountingService_errorServiceInit=Error setting up AccountingService
 AccountingService_errorIO=Database IO Error
 AccountingService_errorDatabaseClosed=Database is closed.
