--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -41,6 +41,7 @@ AccountingContextFactory_errorMissingContextProperty=Fehlender Wert im Kontext: 
 AccountingService_errorNoContext=Service kann nicht ohne Kontext initialisiert werden!
 AccountingService_errorServiceNotInitialised=Service ist nicht initialisiert!
 AccountingService_errorFileLocked=DB Datei [{0}] ist durch einen anderen Prozess gesperrt.
+AccountingService_errorIllegalFileFormat=Datei [{0}] hat ein ungültiges Format!
 AccountingService_errorServiceInit=Initialisierungsfehler
 AccountingService_errorIO=Datenbank Schreib- / Lesefehler
 AccountingService_errorDatabaseClosed=Datenbank ist geschlossen
