XML import wizard i18n

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -77,8 +77,10 @@ labelNo=No
 AbstractClientHandler_text=No client selected
 AbstractClientHandler_message=Please select a client to delete
 
-AccountingSplashHandler_reuseDataMsg=Existing data found in data file for user {0}.\n\Re-use this data?
-AccountingSplashHandler_reuseDataText=Reuse data?
+AbstractInvoiceHandler_errorNoInvoiceInCurrentEditor=No invoice in current editor\!
+AbstractInvoiceHandler_errorNoInvoiceInSelection=No invoice in current selection\!
+
+AccountingSplashHandler_errorUserNotFoundInDbFile=User [{0}] not found in data file [{1}].
 AccountingSplashHandler_setupDialogCancelledMsg=Cannot continue application without necessary info - exiting now...
 AccountingSplashHandler_welcomeDialogTitle=Welcome to togginho Accounting!
 AccountingSplashHandler_welcomeDialogMessage=It appears you are running the application for the first time.\nYou may now decide whether to import existing data or start from scratch.
@@ -122,6 +124,13 @@ ExportInvoiceCommand_exportingReportToFile=Exporting report to file
 ExportInvoiceCommand_fillingReport=Filling report
 ExportInvoiceCommand_loadingTemplate=Loading template
 ExportInvoiceCommand_startingReportGeneration=Starting report generation
+
+ImportFromXmlWizard_dataFileLabel=Data file:
+ImportFromXmlWizard_errorDataFileExists=Cannot choose an existing file for your data\!
+ImportFromXmlWizard_title=Import from XML
+ImportFromXmlWizard_message=Select the XML file to import and the new file location to store your data
+ImportFromXmlWizard_xmlFileLabel=File to import:
+ImportFromXmlWizard_xmlFileSelectText=Select XML File to import
 
 InvoiceEditor_details=Details
 InvoiceEditor_header=Edit invoice
@@ -206,6 +215,8 @@ UserNameAndDbFileWizardPage_dataFile=Data file:
 UserNameAndDbFileWizardPage_desc=Enter your full name (as it will appear on an invoice)\n
 UserNameAndDbFileWizardPage_descNewFile=and select a location where your data will be stored
 UserNameAndDbFileWizardPage_descOldFile=and select your existing data location file
+UserNameAndDbFileWizardPage_errorExistingFile=Cannot choose an existing file for your data\!
+UserNameAndDbFileWizardPage_errorNonExistingFile=Must choose an existing file for your data\!
 UserNameAndDbFileWizardPage_selectFile=Select file...
 UserNameAndDbFileWizardPage_title=User name and data file
 UserNameAndDbFileWizardPage_yourName=Your name:
