--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -70,11 +70,13 @@ labelNo=Nein
 AbstractClientHandler_text=Kein Kunde ausgew\u00E4hlt
 AbstractClientHandler_message=Bitte w\u00E4hlen Sie einen Kunden zum l\u00F6schen aus
 
-AccountingSplashHandler_reuseDataMsg=Existierende Daten f\u00FCr Benutzer \"{0}\" wurden in der angegebenen Datei gefunden.\nDiese weiter verwenden?
-AccountingSplashHandler_reuseDataText=Daten verwenden?
+AbstractInvoiceHandler_errorNoInvoiceInCurrentEditor=Keine Rechnung im aktiven Editor\!
+AbstractInvoiceHandler_errorNoInvoiceInSelection=Keine Rechnung ausgew\u00E4lt\!
+
+AccountingSplashHandler_errorUserNotFoundInDbFile=Benutzer [{0}] konnte in Speicherdatei [{1}] nicht gefunden werden!
 AccountingSplashHandler_setupDialogCancelledMsg=Notwendige Angaben f\u00FCr Programmausf\u00FChrung fehlen - Abbruch.
 AccountingSplashHandler_welcomeDialogTitle=Willkommen bei togginho Accounting!
-AccountingSplashHandler_welcomeDialogMessage=Die Anwendung wird zum ersten mal ausgeführt. Wählen Sie, ob mit neuen Daten begonnen oder existierende importiert werden sollen.
+AccountingSplashHandler_welcomeDialogMessage=Die Anwendung wird zum ersten mal ausgef\u00FChrt. W\u00E4hlen Sie, ob mit neuen Daten begonnen oder existierende importiert werden sollen.
 AccountingSplashHandler_welcomeDialogCreateNew=Neue Daten anlegen (standard)
 AccountingSplashHandler_welcomeDialogUseExisting=Eine existierende Speicherdatei verwenden.
 AccountingSplashHandler_welcomeDialogImportXml=Daten aus XML-Datei importieren.
@@ -115,6 +117,13 @@ ExportInvoiceCommand_exportingReportToFile=Exportiere Report in Datei
 ExportInvoiceCommand_fillingReport=F\u00FClle Report
 ExportInvoiceCommand_loadingTemplate=Lade template
 ExportInvoiceCommand_startingReportGeneration=Erzeugung des Report gestartet
+
+ImportFromXmlWizard_dataFileLabel=Speicherdatei:
+ImportFromXmlWizard_errorDataFileExists=Speicherdatei existiert bereits, bitte neue w\u00E4hlen.
+ImportFromXmlWizard_title=Von XML importieren
+ImportFromXmlWizard_message=W\u00E4hlen Sie eine XML-Datei zum importieren und einen Dateinamen f\u00FCr ihre Speicherdatei aus.
+ImportFromXmlWizard_xmlFileLabel=Importieren von:
+ImportFromXmlWizard_xmlFileSelectText=XML Datei f\u00FCr Import w\u00E4hlen
 
 InvoiceEditor_details=Details
 InvoiceEditor_header=Rechnung bearbeiten
@@ -176,7 +185,7 @@ RevenueDialog_tax=Steuer
 RevenueDialog_totals=Summen
 RevenueDialog_until=Bis:
 
-SendInvoiceCommand_message=Wählen Sie das Datum, für die Fakturierung der Rechnung [{0}]
+SendInvoiceCommand_message=W\u00E4hlen Sie das Datum, f\u00FCr die Fakturierung der Rechnung [{0}]
 SendInvoiceCommand_title=Rechnung fakturieren...
 SendInvoiceCommand_sentDateLabel=Fakturiert am:
 
@@ -199,5 +208,7 @@ UserNameAndDbFileWizardPage_dataFile=Speicherdatei:
 UserNameAndDbFileWizardPage_desc=Geben Sie Ihren vollen Namen an (wie er auf Rechnungen erscheint)\n
 UserNameAndDbFileWizardPage_descNewFile=und w\u00E4hlen Sie einen Speicherort f\u00FCr Ihre Daten aus
 UserNameAndDbFileWizardPage_descOldFile=und w\u00E4hlen Sie Ihre existierende Speicherdatei aus.
+UserNameAndDbFileWizardPage_errorExistingFile=Datei existiert bereits, bitte einen neuen Dateinamen w\u00E4hlen\!
+UserNameAndDbFileWizardPage_errorNonExistingFile=Bitte w\u00E4hlen Sie eine existierende Speicherdatei aus\!
 UserNameAndDbFileWizardPage_selectFile=Ausw\u00E4hlen...
 UserNameAndDbFileWizardPage_yourName=Ihr Name:
