added menu separator export to XML i18n

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -75,3 +75,6 @@ command.change.invoice.filter = Filter...
 # COMMANDS - REVENUE
 command.revenue.name = Revenue...
 commandCategory.revenue.name = Revenue Command Category
+
+# COMMANDS - OTHER
+command.export.data.label = Export data to XML...
