--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -72,3 +72,6 @@ command.change.invoice.filter = Filter...
 
 # COMMANDS - REVENUE
 command.revenue.name = Umsatz...
+
+# COMMANDS - OTHER
+command.export.data.label = Daten nach XML exportieren...
