added FindInvoice command

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -71,6 +71,7 @@ command.invoice.copy.name = Copy / Duplicate
 command.invoice.markAsPaid.name = Mark as paid
 command.invoice.cancel.name = Cancel
 command.change.invoice.filter = Filter...
+command.find.invoice.label = Find Invoice
 
 # COMMANDS - REVENUE
 command.revenue.name = Revenue...
