--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -69,6 +69,7 @@ command.invoice.copy.name = Kopieren / Duplizieren
 command.invoice.markAsPaid.name = Als bezahlt markieren
 command.invoice.cancel.name = Stornieren
 command.change.invoice.filter = Filter...
+command.find.invoice.label = Rechnung finden
 
 # COMMANDS - REVENUE
 command.revenue.name = Umsatz...
