--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -125,6 +125,11 @@ ExportInvoiceCommand_fillingReport=Filling report
 ExportInvoiceCommand_loadingTemplate=Loading template
 ExportInvoiceCommand_startingReportGeneration=Starting report generation
 
+FindInvoiceCommand_inputMessage=Enter the invoice number to search for
+FindInvoiceCommand_inputTitle=Find Invoice
+FindInvoiceCommand_noresultMessage=Invoice with number [{0}] wasn't found!
+FindInvoiceCommand_noresultTitle=Not found
+
 ImportFromXmlWizard_dataFileLabel=Data file:
 ImportFromXmlWizard_errorDataFileExists=Cannot choose an existing file for your data\!
 ImportFromXmlWizard_title=Import from XML
