--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -118,6 +118,11 @@ ExportInvoiceCommand_fillingReport=F\u00FClle Report
 ExportInvoiceCommand_loadingTemplate=Lade template
 ExportInvoiceCommand_startingReportGeneration=Erzeugung des Report gestartet
 
+FindInvoiceCommand_inputMessage=Rechnungsnummer für Suche eingeben:
+FindInvoiceCommand_inputTitle=Rechnung suchen
+FindInvoiceCommand_noresultMessage=Rechnung [{0}] konnte nicht gefunden werden!
+FindInvoiceCommand_noresultTitle=Nicht gefunden
+
 ImportFromXmlWizard_dataFileLabel=Speicherdatei:
 ImportFromXmlWizard_errorDataFileExists=Speicherdatei existiert bereits, bitte neue w\u00E4hlen.
 ImportFromXmlWizard_title=Von XML importieren
