removed Clients from User object

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -157,8 +157,8 @@ MarkInvoiceAsPaidCommand_paymentDateLabel=Payment date:
 MarkInvoiceAsPaidCommand_title=Mark invoice as paid
 
 NewClientWizard_windowTitle=Create a new client...
-NewClientWizard_alreadyExistsMsg=A client with name \"{0}\" already exists!\n\nPlease choose a different name.
-NewClientWizard_alreadyExistsText=Client already exists
+NewClientWizard_unknownErrorMsg=Error saving Client
+NewClientWizard_errorSavingTitle=Error saving client
 	
 NewInvoiceWizard_windowTitle=Create a new invoice
 NewInvoiceWizardPage_chooseClient=Choose client (optional)
