--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -150,8 +150,8 @@ MarkInvoiceAsPaidCommand_paymentDateLabel=Zahlungsdatum:
 MarkInvoiceAsPaidCommand_title=Rechnung als bezahlt markieren
 
 NewClientWizard_windowTitle=Neuen Kunden erstellen...
-NewClientWizard_alreadyExistsMsg=Ein Kunde mit Namen \"{0}\" existiert bereits!\n\nBitte w\u00E4hlen Sie einen anderen Namen.
-NewClientWizard_alreadyExistsText=Kunde existiert bereits.
+NewClientWizard_unknownErrorMsg=Fehler beim Speichern des Kunden.
+NewClientWizard_errorSavingTitle=Fehler beim Speichern
 
 NewInvoiceWizard_windowTitle=Neue Rechnung erstellen...
 NewInvoiceWizardPage_chooseClient=Kunde w\u00E4hlen (optional)
