added payment terms to UI and XML import/export

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -56,3 +56,8 @@ InvoiceState_SENT=Sent
 InvoiceState_OVERDUE=Overdue
 InvoiceState_PAID=Paid
 InvoiceState_CANCELLED=Cancelled
+
+###############################################################################
+# PaymentTypes
+###############################################################################
+PaymentType_TRADE_CREDIT=Trade Credit
