--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -64,3 +64,8 @@ InvoiceState_SENT=Fakturiert
 InvoiceState_OVERDUE=\u00DCberfällig
 InvoiceState_PAID=Bezahlt
 InvoiceState_CANCELLED=Storniert
+
+###############################################################################
+# PaymentTypes
+###############################################################################
+PaymentType_TRADE_CREDIT=Zielkauf
