--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -37,7 +37,7 @@ labelAddress=Address
 labelBankAccount=Bank Account
 labelBankCode=Bank code / ID:
 labelBankName=Bank Name:
-labelBasicInformation=Basic Information
+labelBasicInformation=Basic Information:
 labelCity=City:
 labelClient=Client
 labelClientDetails=Client details
@@ -51,6 +51,9 @@ labelInvoiceDueDate=Due date:
 labelInvoiceNo=Invoice number:
 labelMobile=Mobile:
 labelName=Name:
+labelPaymentTerms=Payment Terms
+labelPaymentType=Payment Type:
+labelPaymentTarget=Payment target (in days):
 labelPhone=Phone:
 labelPostalCode=Post Code:
 labelPricePerUnit=Price per Unit
@@ -137,7 +140,7 @@ ImportFromXmlWizard_message=Select the XML file to import and the new file locat
 ImportFromXmlWizard_xmlFileLabel=File to import:
 ImportFromXmlWizard_xmlFileSelectText=Select XML File to import
 
-InvoiceEditor_details=Details
+InvoiceEditor_details=Invoice Positions
 InvoiceEditor_header=Edit invoice
 InvoiceEditor_overview=Overview
 
@@ -161,8 +164,8 @@ NewClientWizard_unknownErrorMsg=Error saving Client
 NewClientWizard_errorSavingTitle=Error saving client
 	
 NewInvoiceWizard_windowTitle=Create a new invoice
-NewInvoiceWizardPage_chooseClient=Choose client (optional)
-NewInvoiceWizardPage_desc=Enter a unique invoice number and optionally choose a client.\nThe client may also be chosen later, but must be assigned before sending the invoice.
+NewInvoiceWizardPage_chooseClient=Choose client:
+NewInvoiceWizardPage_desc=Enter a unique invoice number and choose a client.
 NewInvoiceWizardPage_generate=Generate...
 NewInvoiceWizardPage_title=Invoice number and client
 NewInvoiceWizardPage_alreadyExistsMsg=An invoice with that number already exists.\n\nPlease choose another number.
