--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -30,7 +30,7 @@ labelAddress=Adresse
 labelBankAccount=Bankverbindung
 labelBankCode=Bankleitzahl:
 labelBankName=Bank:
-labelBasicInformation=Grundinformationen
+labelBasicInformation=Grundinformationen:
 labelCity=Stadt:
 labelClient=Kunde
 labelClientDetails=Kundendetails
@@ -44,6 +44,9 @@ labelInvoiceDueDate=Zahlungsziel:
 labelInvoiceNo=Rechnungsnummer:
 labelMobile=Mobil:
 labelName=Name:
+labelPaymentTerms=Zahlungsbedingungen
+labelPaymentType=Zahlungsart:
+labelPaymentTarget=Zahlungsziel (in Tagen):
 labelPhone=Telefon:
 labelPostalCode=Postleitzahl:
 labelPricePerUnit=Einzelpreis
@@ -130,7 +133,7 @@ ImportFromXmlWizard_message=W\u00E4hlen Sie eine XML-Datei zum importieren und e
 ImportFromXmlWizard_xmlFileLabel=Importieren von:
 ImportFromXmlWizard_xmlFileSelectText=XML Datei f\u00FCr Import w\u00E4hlen
 
-InvoiceEditor_details=Details
+InvoiceEditor_details=Rechnungspositionen
 InvoiceEditor_header=Rechnung bearbeiten
 InvoiceEditor_overview=\u00DCbersicht
 
@@ -154,8 +157,8 @@ NewClientWizard_unknownErrorMsg=Fehler beim Speichern des Kunden.
 NewClientWizard_errorSavingTitle=Fehler beim Speichern
 
 NewInvoiceWizard_windowTitle=Neue Rechnung erstellen...
-NewInvoiceWizardPage_chooseClient=Kunde w\u00E4hlen (optional)
-NewInvoiceWizardPage_desc=Bitte geben Sie eine eindeutige Rechnungsnumer ein und w\u00E4hlen Sie optinonal einen Kunden aus.\nDer Kunde kann auch sp\u00E4ter noch gew\u00E4hlt werden, muss aber vor dem Absenden der Rechnung bestimmt werden.
+NewInvoiceWizardPage_chooseClient=Kunde w\u00E4hlen:
+NewInvoiceWizardPage_desc=Bitte geben Sie eine eindeutige Rechnungsnumer ein und w\u00E4hlen Sie einen Kunden aus.
 NewInvoiceWizardPage_generate=Generieren...
 NewInvoiceWizardPage_title=Rechnungsnummer und Kunde
 NewInvoiceWizardPage_alreadyExistsMsg=Eine Rechnung mit dieser Nummer existiert bereits.\n\nBitte w\u00E4hlen Sie eine andere Nummer.
