added payment terms to reporting

--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages.properties
@@ -34,6 +34,7 @@ InvoiceDataSource_userBankAccountTitle=Account No:
 InvoiceDataSource_userBankCodeTitle=Bank code:
 InvoiceDataSource_userBankTitle=Bank:
 InvoiceDataSource_userTaxNumberHeader=Tax number:
+InvoiceDataSource_paymentConditionTradeCredit=Payment Terms: Net {0}.
 
 RevenueReportGenerator_clientTitle=Client
 RevenueReportGenerator_fromTitle=From:
@@ -47,3 +48,8 @@ RevenueReportGenerator_sumTitle=Total:
 RevenueReportGenerator_taxAmountTitle=VAT amount
 RevenueReportGenerator_taxRateTitle=VAT perc.
 RevenueReportGenerator_untilTitle=Until:
+
+TaxId=Tax ID: {0}
+Phone=Phone: {0}
+Mobile=Mobile: {0}
+Email=Email: {0}
