--- a/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/messages_de.properties
@@ -20,7 +20,6 @@ AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
 InvoiceDataSource_invoiceDateTitle=Rechnungsdatum:
 InvoiceDataSource_invoiceNumberTitle=Rechnungsnummer:
 InvoiceDataSource_invoiceTitle=Rechnung
-InvoiceDataSource_paymentConditionText=Zahlbar innerhalb 30 Tagen ohne Abzug
 InvoiceDataSource_positionHeaderDescription=Leistung/\nArtikel
 InvoiceDataSource_positionHeaderPrice=Preis\n(netto)
 InvoiceDataSource_positionHeaderPricePerUnit=Einzelpreis\n(netto)
@@ -34,6 +33,7 @@ InvoiceDataSource_userBankAccountTitle=Kontonummer:
 InvoiceDataSource_userBankCodeTitle=Bankleitzahl:
 InvoiceDataSource_userBankTitle=Bankverbindung:
 InvoiceDataSource_userTaxNumberHeader=Steuernummer:
+InvoiceDataSource_paymentConditionTradeCredit=Zahlungsbedingungen: {0} Tage rein netto.
 
 RevenueReportGenerator_clientTitle=Kunde
 RevenueReportGenerator_fromTitle=Von:
@@ -47,3 +47,8 @@ RevenueReportGenerator_sumTitle=Summe:
 RevenueReportGenerator_taxAmountTitle=USt. Summe
 RevenueReportGenerator_taxRateTitle=USt.
 RevenueReportGenerator_untilTitle=Bis:
+
+TaxId=Steuernr: {0}
+Phone=Telephon: {0}
+Mobile=Mobil: {0}
+Email=Email: {0}
