added creation of new invoices to service

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -38,7 +38,7 @@ AccountingService_errorServiceInit=Error setting up AccountingService
 AccountingService_errorIO=Database IO Error
 AccountingService_errorDatabaseClosed=Database is closed.
 AccountingService_errorDatabaseReadOnly=Database is read-only
-AccountingService_errorMissingInvoiceNumber=Cannot save an invoice without an invoice number.
+AccountingService_errorMissingInvoiceNumber=Cannot create an invoice without an invoice number.
 AccountingService_errorUnknownUser=Cannot save an invoice for an unknown user.
 AccountingService_errorInvoiceCannotBeDeleted=Invoice [{0}] [{1}] and cannot be deletedis in state
 AccountingService_errorCannotMarkInvoiceAsPaid=Invoices can only be marked as paid while in state 'Sent' or 'Overdue'
@@ -46,6 +46,9 @@ AccountingService_errorCannotSaveInvoice=Invoices cannot be saved after they hav
 AccountingService_errorCannotSendCancelledInvoice=Cancelled invoices cannot be sent again!
 AccountingService_errorCannotSendInvoiceWithoutDueDate=Cannot send an invoice without a due date!
 AccountingService_errorCannotSendInvoiceWithDueDateInPast=Due date is in the past ({0}), cannot send this invoice! 
+AccountingService_errorMissingClient=Please select a client for the invoice.
+AccountingService_errorInvoiceNumberExists=An invoice with that number already exists.
+AccountingService_errorClientExists=A client with that name already exists.
 
 ###############################################################################
 # Invoice states
