--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -46,7 +46,7 @@ AccountingService_errorServiceInit=Initialisierungsfehler
 AccountingService_errorIO=Datenbank Schreib- / Lesefehler
 AccountingService_errorDatabaseClosed=Datenbank ist geschlossen
 AccountingService_errorDatabaseReadOnly=Datenbank kann nur gelesen werden
-AccountingService_errorMissingInvoiceNumber=Eine Rechnung kann nur mit Rechngungsnummer gespeichert werden.
+AccountingService_errorMissingInvoiceNumber=Bitte vergeben Sie eine eindeutige Rechnungsnummer.
 AccountingService_errorUnknownUser=Rechnung kann nicht f\u00FCr einen unbekannten Nutzer gespeichert werden.
 AccountingService_errorInvoiceCannotBeDeleted=Rechnung [{0}] ist im Zustand [{1}] und kann nicht gel\u00F6scht werden.
 AccountingService_errorCannotMarkInvoiceAsPaid=Rechnungen k\u00F6nnen nur im Zustand 'Verschickt' und '\u00DCœberf\u00E4llig' als bezahlt markiert werden.
@@ -54,6 +54,9 @@ AccountingService_errorCannotSaveInvoice=Rechnungen k\u00F6nnen nach dem Versend
 AccountingService_errorCannotSendCancelledInvoice=Eine stornierte Rechnung kann nicht erneut verschickt werden!
 AccountingService_errorCannotSendInvoiceWithoutDueDate=Eine Rechnung kann nicht ohne Zahlungsziel verschickt werden!
 AccountingService_errorCannotSendInvoiceWithDueDateInPast=Das Zahlungsziel liegt in der Vergangenheit ({0}), diese Rechnung kann nicht verschickt werden
+AccountingService_errorMissingClient=Bitte w\u00E4hlen Sie einen Kunden f\u00FCr die Rechnung aus.
+AccountingService_errorInvoiceNumberExists=Eine Rechnung mit dieser Nummer existiert bereits.
+AccountingService_errorClientExists=Ein Kunde mit diesem Namen existiert bereits.
 
 ###############################################################################
 # Invoice states
