added client number to client wizard

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -42,6 +42,7 @@ labelCity=City:
 labelClient=Client
 labelClientDetails=Client details
 labelClientName=Client name:
+labelClientNumber=Client number:
 labelDescription=Description:
 labelEmail=Email:
 labelError=Error!
