--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -35,6 +35,7 @@ labelCity=Stadt:
 labelClient=Kunde
 labelClientDetails=Kundendetails
 labelClientName=Kundenname:
+labelClientNumber=Kundennr:
 labelDescription=Beschreibung:
 labelEmail=Email:
 labelError=Fehler!
