added base method for dealing with exceptions from service calls

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -45,7 +45,6 @@ labelClientName=Client name:
 labelClientNumber=Client number:
 labelDescription=Description:
 labelEmail=Email:
-labelError=Error!
 labelFax=Fax:
 labelInvoiceDate=Invoice date:
 labelInvoiceDueDate=Due date:
@@ -74,6 +73,9 @@ labelRemove=Remove
 
 labelYes=Yes
 labelNo=No
+
+labelError=Error!
+labelUnknownError=Unknown Error. Please check the logfiles.
 
 ###############################################################################
 # View / Wizard / Editor specific resources
