--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -38,7 +38,6 @@ labelClientName=Kundenname:
 labelClientNumber=Kundennr:
 labelDescription=Beschreibung:
 labelEmail=Email:
-labelError=Fehler!
 labelFax=Fax:
 labelInvoiceDate=Rechnungsdatum:
 labelInvoiceDueDate=Zahlungsziel:
@@ -67,6 +66,9 @@ labelRemove=L\u00F6schen
 
 labelYes=Ja
 labelNo=Nein
+
+labelError=Fehler!
+labelUnknownError=Unknown Error. Please check the logfiles.
 
 ###############################################################################
 # View / Wizard / Editor specific resources
