--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -51,6 +51,12 @@ AccountingService_errorInvoiceNumberExists=An invoice with that number already e
 AccountingService_errorClientExists=A client with that name already exists.
 
 ###############################################################################
+# ModelMapper errors
+###############################################################################
+ModelMapper_errorDuringExport=Fehler beim Exportieren der Daten!
+ModelMapper_errorDuringImport=Fehler beim Importieren der Daten!
+
+###############################################################################
 # Invoice states
 ###############################################################################
 InvoiceState_UNSAVED=Unsaved
