--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -59,6 +59,12 @@ AccountingService_errorInvoiceNumberExists=Eine Rechnung mit dieser Nummer exist
 AccountingService_errorClientExists=Ein Kunde mit diesem Namen existiert bereits.
 
 ###############################################################################
+# ModelMapper errors
+###############################################################################
+ModelMapper_errorDuringExport=Error while exporting data!
+ModelMapper_errorDuringImport=Error while importing data!
+
+###############################################################################
 # Invoice states
 ###############################################################################
 InvoiceState_UNSAVED=Neu
