added status and error messages for XML import/export

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -131,6 +131,9 @@ ExportInvoiceCommand_fillingReport=Filling report
 ExportInvoiceCommand_loadingTemplate=Loading template
 ExportInvoiceCommand_startingReportGeneration=Starting report generation
 
+ExportModelToXmlHandler_exportSuccessfull_title=Export finished
+ExportModelToXmlHandler_exportSuccessfull_text=Export to file [{0}] was successful. 
+
 FindInvoiceCommand_inputMessage=Enter the invoice number to search for
 FindInvoiceCommand_inputTitle=Find Invoice
 FindInvoiceCommand_noresultMessage=Invoice with number [{0}] wasn't found!
