--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -124,6 +124,9 @@ ExportInvoiceCommand_fillingReport=F\u00FClle Report
 ExportInvoiceCommand_loadingTemplate=Lade template
 ExportInvoiceCommand_startingReportGeneration=Erzeugung des Report gestartet
 
+ExportModelToXmlHandler_exportSuccessfull_title=Export abgeschlossen
+ExportModelToXmlHandler_exportSuccessfull_text=Export nach Datei [{0}] war erfolgreich.
+
 FindInvoiceCommand_inputMessage=Rechnungsnummer für Suche eingeben:
 FindInvoiceCommand_inputTitle=Rechnung suchen
 FindInvoiceCommand_noresultMessage=Rechnung [{0}] konnte nicht gefunden werden!
