--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -68,7 +68,7 @@ labelYes=Ja
 labelNo=Nein
 
 labelError=Fehler!
-labelUnknownError=Unknown Error. Please check the logfiles.
+labelUnknownError=Unbekannter Fehler. Bitte pr\u00FCfen Sie die Logdatei.
 
 ###############################################################################
 # View / Wizard / Editor specific resources
