now using TimeFrame where possible added BIC and IBAN to bank account info UI

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -38,6 +38,7 @@ labelBankAccount=Bank Account
 labelBankCode=Bank code / ID:
 labelBankName=Bank Name:
 labelBasicInformation=Basic Information:
+labelBIC=BIC:
 labelCity=City:
 labelClient=Client
 labelClientDetails=Client details
@@ -46,6 +47,7 @@ labelClientNumber=Client number:
 labelDescription=Description:
 labelEmail=Email:
 labelFax=Fax:
+labelIBAN=IBAN:
 labelInvoiceDate=Invoice date:
 labelInvoiceDueDate=Due date:
 labelInvoiceNo=Invoice number:
@@ -68,6 +70,16 @@ labelTotalNet=Net total
 labelTotalTax=Tax total
 labelUnit=Unit
 
+# time frame
+labelTimeFrame=Time frame
+labelFrom=From:
+labelUntil=Until:
+labelLastMonth=Last month
+labelThisMonth=This month
+labelLastYear=Last year
+labelThisYear=This year
+
+# really common labels
 labelAdd=Add...
 labelRemove=Remove
 
@@ -191,18 +203,15 @@ ReportGenerationUtil_successText=PDF Generation finished
 RevenueDialog_client=Client
 RevenueDialog_defaultFilename=Revenue
 RevenueDialog_export=Export...
-RevenueDialog_from=From:
 RevenueDialog_gross=Gross
 RevenueDialog_invoiceDate=Invoice Date
 RevenueDialog_invoiceNo=Invoice no
 RevenueDialog_invoices=Invoices
 RevenueDialog_net=Net
 RevenueDialog_paymentDate=Payment Date
-RevenueDialog_revenueTimeframe=Revenue timeframe
 RevenueDialog_search=Search
 RevenueDialog_tax=Tax
 RevenueDialog_totals=Totals
-RevenueDialog_until=Until:
 
 SendInvoiceCommand_message=Select the date that invoice [{0}] was billed
 SendInvoiceCommand_title=Mark invoice as billed...
