--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -31,6 +31,7 @@ labelBankAccount=Bankverbindung
 labelBankCode=Bankleitzahl:
 labelBankName=Bank:
 labelBasicInformation=Grundinformationen:
+labelBIC=BIC:
 labelCity=Stadt:
 labelClient=Kunde
 labelClientDetails=Kundendetails
@@ -39,6 +40,7 @@ labelClientNumber=Kundennr:
 labelDescription=Beschreibung:
 labelEmail=Email:
 labelFax=Fax:
+labelIBAN=IBAN:
 labelInvoiceDate=Rechnungsdatum:
 labelInvoiceDueDate=Zahlungsziel:
 labelInvoiceNo=Rechnungsnummer:
@@ -61,6 +63,16 @@ labelTotalNet=Summe netto
 labelTotalTax=Steuern
 labelUnit=Einheit
 
+# time frame
+labelTimeFrame=Zeitraum
+labelFrom=Von:
+labelUntil=Bis:
+labelLastMonth=Letzter Monat
+labelThisMonth=Dieser Monat
+labelLastYear=Letztes Jahr
+labelThisYear=Dieses Jahr
+
+# really common labels
 labelAdd=Hinzuf\u00FCgen...
 labelRemove=L\u00F6schen
 
@@ -184,18 +196,15 @@ ReportGenerationUtil_successText=PDF Generierung erfolgreich
 RevenueDialog_client=Kunde
 RevenueDialog_defaultFilename=Umsatz
 RevenueDialog_export=Export...
-RevenueDialog_from=Von:
 RevenueDialog_gross=Brutto
 RevenueDialog_invoiceDate=Rechnungsdatum
 RevenueDialog_invoiceNo=Rechnungsnr.
 RevenueDialog_invoices=Rechnungen
 RevenueDialog_net=Netto
 RevenueDialog_paymentDate=Zahlungseingang
-RevenueDialog_revenueTimeframe=Zeitraum f\u00FCr Umsatz
 RevenueDialog_search=Suchen
 RevenueDialog_tax=Steuer
 RevenueDialog_totals=Summen
-RevenueDialog_until=Bis:
 
 SendInvoiceCommand_message=W\u00E4hlen Sie das Datum, f\u00FCr die Fakturierung der Rechnung [{0}]
 SendInvoiceCommand_title=Rechnung fakturieren...
