added basic Expense UI: 	- View 	- Wizard for adding and editing

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -22,6 +22,7 @@ menu.file.mnemonic = F
 menu.file.new.label = New
 menu.file.new.client.label = Client
 menu.file.new.invoice.label = Invoice
+menu.file.new.expense.label = Expense
 menu.file.new.other.label = Other...
 menu.window.label = Window
 menu.window.mnemonic = W
@@ -37,11 +38,13 @@ editor.invoice.name = View / Edit Invoice
 
 # VIEWS
 view.clients = Clients
-view.openInvoices = Invoices
+view.invoices = Invoices
+view.expenses = Expenses
 
 # WIZARDS
 new.client.wizard.label = New Client
 new.invoice.wizard.label = New Invoice
+new.expense.wizard.label = New Expense
 
 # COMMANDS - COMMON
 command.save.label = Save
@@ -58,6 +61,11 @@ commandCategory.client.name = Client Command Category
 command.editClient.label = Edit
 command.editClient.name = Edit Client
 command.deleteClient.name = Delete Client
+
+# COMMANDS - EXPENSES
+command.viewExpenses.label = View Expenses
+commandCategory.expense.name = Expense Command Category
+command.newExpense.name = New Expense...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
