--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -22,6 +22,7 @@ menu.file.mnemonic = D
 menu.file.new.label = Neu
 menu.file.new.client.label = Kunde
 menu.file.new.invoice.label = Rechnung
+menu.file.new.expense.label = Ausgabe
 menu.file.new.other.label = Sonstige...
 menu.window.label = Ansicht
 menu.window.mnemonic = A
@@ -37,11 +38,13 @@ editor.invoice.name = Rechnung ansehen / bearbeiten
 
 # VIEWS
 view.clients = Kunden
-view.openInvoices = Rechnungen
+view.invoices = Rechnungen
+view.expenses = Ausgaben
 
 # WIZARDS
 new.client.wizard.label = Neuer Kunde
 new.invoice.wizard.label = Neue Rechnung
+new.expense.wizard.label = Neue Ausgabe
 
 # COMMANDS - COMMON
 command.save.label = Speichern
@@ -57,6 +60,10 @@ command.editClient.label = Bearbeiten
 command.newClient.name = Neuer Kunde...
 command.editClient.name = Kunde bearbeiten
 command.deleteClient.name = Kunde löschen
+
+# COMMANDS - EXPENSES
+command.viewExpenses.label = Ausgaben
+command.newExpense.name = Neue Ausgabe...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
