--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -44,15 +44,19 @@ labelClient=Client
 labelClientDetails=Client details
 labelClientName=Client name:
 labelClientNumber=Client number:
-labelDescription=Description:
+labelDate=Date
+labelDescription=Description
 labelEmail=Email:
+labelExpense=Expense
 labelFax=Fax:
+labelGross=Gross
 labelIBAN=IBAN:
 labelInvoiceDate=Invoice date:
 labelInvoiceDueDate=Due date:
 labelInvoiceNo=Invoice number:
 labelMobile=Mobile:
 labelName=Name:
+labelNet=Net
 labelPaymentTerms=Payment Terms
 labelPaymentType=Payment Type:
 labelPaymentTarget=Payment target (in days):
@@ -132,6 +136,11 @@ DeleteInvoiceCommand_confirmMessage=Are you sure you want to delete invoice [{0}
 DeleteInvoiceCommand_confirmText=Confirm delete
 
 EditClientCommand_errorOpeningEditor=Error opening editor for client [{0}].
+
+EditExpenseWizard_newTitle=New Expense
+EditExpenseWizard_editTitle=Edit Expense
+EditExpenseWizard_newDesc=Create a new expense
+EditExpenseWizard_editDesc=Edit an existing expense
 
 EditInvoiceCommand_errorOpeningEditor=Error opening invoice [{0}].
 EditInvoiceCommand_uneditableMessage=This invoice cannot be edited anymore
