--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -37,15 +37,19 @@ labelClient=Kunde
 labelClientDetails=Kundendetails
 labelClientName=Kundenname:
 labelClientNumber=Kundennr:
-labelDescription=Beschreibung:
+labelDate=Datum
+labelDescription=Beschreibung
 labelEmail=Email:
+labelExpense=Ausgabe
 labelFax=Fax:
+labelGross=Brutto
 labelIBAN=IBAN:
 labelInvoiceDate=Rechnungsdatum:
 labelInvoiceDueDate=Zahlungsziel:
 labelInvoiceNo=Rechnungsnummer:
 labelMobile=Mobil:
 labelName=Name:
+labelNet=Netto
 labelPaymentTerms=Zahlungsbedingungen
 labelPaymentType=Zahlungsart:
 labelPaymentTarget=Zahlungsziel (in Tagen):
@@ -125,6 +129,11 @@ DeleteInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}]
 DeleteInvoiceCommand_confirmText=L\u00F6schen best\u00E4tigen
 
 EditClientCommand_errorOpeningEditor=Fehler beim \u00D6ffnen des Kunden [{0}].
+
+EditExpenseWizard_newTitle=Neue Ausgabe
+EditExpenseWizard_editTitle=Ausgabe bearbeiten
+EditExpenseWizard_newDesc=Neue Ausgabe erstellen
+EditExpenseWizard_editDesc=Existierende Ausgabe bearbeiten
 
 EditInvoiceCommand_errorOpeningEditor=Fehler beim \u00D6ffnen der Rechnung [{0}].
 EditInvoiceCommand_uneditableMessage=Diese Rechnung kann nicht mehr editiert werden.
