added config dialog for ExpensesView timeframe

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -66,6 +66,7 @@ command.deleteClient.name = Delete Client
 command.viewExpenses.label = View Expenses
 commandCategory.expense.name = Expense Command Category
 command.newExpense.name = New Expense...
+command.changeExpensesViewTimeFrame.name = Timeframe...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
