--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -64,6 +64,7 @@ command.deleteClient.name = Kunde löschen
 # COMMANDS - EXPENSES
 command.viewExpenses.label = Ausgaben
 command.newExpense.name = Neue Ausgabe...
+command.changeExpensesViewTimeFrame.name = Zeitraum...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
