added expense type

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -70,3 +70,9 @@ InvoiceState_CANCELLED=Cancelled
 # PaymentTypes
 ###############################################################################
 PaymentType_TRADE_CREDIT=Trade Credit
+
+###############################################################################
+# Expense types
+###############################################################################
+ExpenseType_OPEX=Operational Expense
+ExpenseType_CAPEX=Capital Expense
