--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -78,3 +78,9 @@ InvoiceState_CANCELLED=Storniert
 # PaymentTypes
 ###############################################################################
 PaymentType_TRADE_CREDIT=Zielkauf
+
+###############################################################################
+# Expense types
+###############################################################################
+ExpenseType_OPEX=Betriebsausgabe
+ExpenseType_CAPEX=Investitionsausgabe
